fixed navbar icons click through, using z-index

--- a/style.css
+++ b/style.css
@@ -66,10 +66,11 @@ body {
 .navbar {
   color: white;
   /* background-color: rgba(37, 40, 57); */
-  /* background-color: rgba(37, 40, 57, 1); */
+
   background-color: rgba(37, 40, 57, 0.9);
   box-shadow: 0px 1px 15px 5px rgba(0, 0, 0, 0.3);
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100vw;
   opacity: 100%;
